WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314966
IntersectionObserver reports incorrect bounds for SVG element targets
https://bugs.webkit.org/show_bug.cgi?id=314966
Summary
IntersectionObserver reports incorrect bounds for SVG element targets
Ahmad Saleem
Reported
2026-05-16 18:03:26 PDT
ssia - trying to fix svg related Intersection Observer test cases.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-16 18:03:34 PDT
<
rdar://problem/177260411
>
Ahmad Saleem
Comment 2
2026-05-16 18:08:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65055
EWS
Comment 3
2026-05-20 13:49:22 PDT
Committed
313596@main
(32267a41143d): <
https://commits.webkit.org/313596@main
> Reviewed commits have been landed. Closing PR #65055 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug